--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet/less" href="css/tabbar.less">
 		<link rel="stylesheet/less" href="css/home.less">
 		<link rel="stylesheet/less" href="css/home_download.less">
+		<link rel="stylesheet/less" href="css/home_search.less">
 		<link rel="stylesheet/less" href="css/home_subsidy.less">
 		<link rel="stylesheet/less" href="css/home_category.less">
 		<link rel="stylesheet/less" href="css/home_product.less">
@@ -40,6 +41,20 @@
 					打开APP
 				</a>
 			</div>
+			
+			<div class="search">
+				<div class="left">
+					<div class="icon"></div>
+					<div class="input">在千万海外商品中搜索</div>
+				</div>
+				<div class="right">
+					<div class="login-box">
+						登录/注册
+					</div>
+				</div>
+			</div>
+			
+			
 			
 			<!-- 补贴 -->
 			<div class="subsidy">
@@ -143,7 +158,7 @@
 							<span class="tag ticket">立减200元</span>
 							<span class="tag">2件7.1折</span>
 						</div>
-						<div class="price">优惠价¥4599</div>
+						<div class="price">优惠价¥<span>4599</span></div>
 					</div>
 				</div>
 				<div class="item">
@@ -157,7 +172,7 @@
 							<span class="tag ticket">立减200元</span>
 							<span class="tag">2件7.1折</span>
 						</div>
-						<div class="price">优惠价¥4599</div>
+						<div class="price">优惠价¥<span>4599</span></div>
 					</div>
 				</div>
 				<div class="item">
@@ -171,7 +186,7 @@
 							<span class="tag ticket">立减200元</span>
 							<span class="tag">2件7.1折</span>
 						</div>
-						<div class="price">优惠价¥4599</div>
+						<div class="price">优惠价¥<span>4599</span></div>
 					</div>
 				</div>
 				<div class="item">
@@ -185,7 +200,7 @@
 							<span class="tag ticket">立减200元</span>
 							<span class="tag">2件7.1折</span>
 						</div>
-						<div class="price">优惠价¥4599</div>
+						<div class="price">优惠价¥<span>4599</span></div>
 					</div>
 				</div>
 				<div class="item">
@@ -199,7 +214,8 @@
 							<span class="tag ticket">立减200元</span>
 							<span class="tag">2件7.1折</span>
 						</div>
-						<div class="price">优惠价¥4599</div>
+						<div class="price">优惠价¥<span>4599</span></div>
+						</div>
 					</div>
 				</div>
 			</div>
